--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,4 +1,4 @@
-/*.collapsible {
+.collapsible {
   background-color: white;
   color: #444;
   cursor: pointer;
@@ -8,13 +8,36 @@
   text-align: left;
   outline: none;
   font-size: 15px;
-}*/
-a {
+}
+
+.contact {
+  text-decoration: none;
+  background-color: none;
+}
+
+.title{
+  padding-bottom: 15px;
+}
+
+.trello img {
+  height: 100px;
+}
+
+.card-case-study {
+  /*display: flex;*/
+  /*background-color: #c8e4d82e;*/
+  margin: 20px 0;
+  /*border-radius: 5px;*/
+  /*box-shadow: 0 0 10px rgba(0,0,0,0.2);*/
+  padding: 10px;
+}
+
+/*a {
   text-decoration: none;
 }
 a:hover{
   text-decoration: none;
-}
+}*/
 
 .active, .collapsible:hover {
   background-color: white;
