--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -28,11 +28,13 @@ h2 {
 
 .casestudy-directory {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   list-style-type: none;
   font-size: 15px;
   padding-top: 15px;
   padding-bottom: 15px;
+  padding-left: 0px;
+  /*color: #125F60;*/
 }
 
 .container {
