--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,5 +1,12 @@
 body {
   padding: 120px 0;
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: left;
+  background-color: #fff;
 }
 
 .title {
@@ -8,7 +15,13 @@ body {
 
 h2 {
   padding-top: 15px;
+  padding-bottom: 10px:
 }
+
+#schema {
+  height: 200px;
+}
+
 
 .link {
   color: #125F60;
@@ -32,7 +45,7 @@ h2 {
 
 .casestudy-directory {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   list-style-type: none;
   font-size: 15px;
   padding-top: 15px;
