--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -18,10 +18,15 @@ h2 {
   padding-bottom: 10px:
 }
 
+/*Pictures*/
 #schema {
   height: 200px;
 }
 
+.tasks {
+  height: 200px;
+  margin: 5px 20px;
+}
 
 .link {
   color: #125F60;
