--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,158 +1,63 @@
-body {
-  padding: 120px 0;
-  margin: 0;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  text-align: left;
-  background-color: #fff;
-}
-
 .title {
   padding-bottom: 15px;
 }
 
-h2 {
-  padding-top: 15px;
-  padding-bottom: 10px:
-}
-
-/*Pictures*/
-#schema {
-  height: 200px;
-}
-
-.tasks {
-  height: 200px;
-  margin: 5px 20px;
-}
-
-#reading-header {
-  padding-left: 15px;
-}
-
-.link {
-  color: #125F60;
-}
-
-.button {
-  padding-top: 10px;
-}
-
-/*cards*/
-.card-case-study {
-  margin: 20px 0;
-  padding: 10px;
-}
-
-.modal-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.casestudy-directory {
+.responsive-container {
+  box-sizing: border-box;
+  max-width: 1200px;
   display: flex;
   justify-content: space-around;
-  list-style-type: none;
-  font-size: 15px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 0px;
-  /*color: #125F60;*/
+  align-items: center;
+  margin: 50px auto;
+  /*margin-top: 30px;*/
+}
+
+@media screen and (max-width: 1000px) {
+  .responsive-container {
+    display: block;
+  }
+}
+
+.content {
+  margin-left: 20px;
+}
+
+.pic {
+  min-width: 200px;
+  max-width: 200px;
+  min-height: 200px;
+  max-height: 200px;
+  border-radius: 50%;
+  margin: 0 auto;
+  text-align: center;
+
 }
 
 .container {
-  justify-content: center;
-  padding-top: 0px;
-  padding-bottom: 40px;
-  padding-left: 300px;
-  padding-right: 300px;
-  max-width: 600px;
-  width: 500px;
-  margin: 0 auto;
+  margin: 0 20px;
 }
 
-.card-portfolio-top {
-  display: flex;
-  margin: 20px 0;
-  padding: 10px;
-}
-
-.card-portfolio {
-  display: flex;
-  margin: 20px 0;
+.button {
+  background-color: #c8e4d894;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  padding: 10px;
+  padding: 10px 10px;
+  color: #125F60;
+  font-weight: bold;
+  text-decoration: none;
+  border: none;
+  margin:5px 5px;
 }
 
-.card-portfolio-text {
-  padding: 0 18px 18px;
+.button-project {
+  margin-top: 42px;
 }
 
-/*images*/
-.trello img {
-  height: 100px;
+.button:hover {
+  background-color: #c0dacf;
+  color: #125F60;
+  text-decoration: none;
+  /*cursor:pointer;*/
 }
-
-#profile-pic {
-    background-position: center;
-    background-size: cover;
-    height:125px;
-    border-radius: 50%;
- }
-
-#le-wagon-picture {
-  height: 20px;
-  opacity: 40%;
-}
-
-#le-wagon-picture:hover {
-  opacity: 100%;
-}
-
-
-#elderme-pic, #calculator-pic, #flashcard-pic {
-  background-position: center;
-  padding-top: 5px;
-  height: 200px;
-  width: 250px;
-  background-size: cover;
- }
-
-.study-pic {
-  height: 150px;
-}
-
-.study-pic:hover {
-  height:300px;
-}
-
-.roadmap {
-  height: 150px;
-}
-
-
-/**/
-.coming-soon {
-  text-align: center;
-  width: 275px;
- }
-
-#intro {
-  padding: 20px 0;
-}
-
-.project {
-  padding: 20px 0;
-}
-
-.project-container {
-  display: grid;
-}
-
 
 /*contact icons*/
 .list-inline-item {
@@ -190,23 +95,6 @@ h2 {
   justify-content: center;
 }
 
-/*buttons*/
-.btn-project {
-  background-color: #c8e4d894;
-  border-radius: 5px;
-  padding: 10px 20px;
-  color: #125F60;
-  font-weight: bold;
-  text-decoration: none;
-  border: none;
-}
-
-.btn-project:hover {
-  background-color: #c0dacf;
-  color: #125F60;
-  text-decoration: none;
-}
-
 .footer {
   display: flex;
   justify-content: center;
@@ -218,4 +106,29 @@ h2 {
   font-size: 20px;
   display: flex;
   justify-content: center;
+}
+
+
+
+#le-wagon-picture {
+  height: 20px;
+  opacity: 40%;
+}
+
+#le-wagon-picture:hover {
+  opacity: 100%;
+}
+
+
+#elderme-pic, #calculator-pic, #flashcard-pic {
+  /*background-position: center;*/
+  padding-top: 5px;
+  height: 200px;
+  width: 350px;
+  background-size: cover;
+ }
+
+ .link {
+  color: #125F60;
+  cursor:pointer;
 }
