--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -59,6 +59,17 @@
   /*cursor:pointer;*/
 }
 
+.casestudy-directory {
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  font-size: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 0px;*/
+  /*color: #125F60;*/
+}
+
 /*contact icons*/
 .list-inline-item {
   display: flex;
