--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9,7 +9,6 @@
   justify-content: space-around;
   align-items: center;
   margin: 50px auto;
-  /*margin-top: 30px;*/
 }
 
 @media screen and (max-width: 1000px) {
@@ -30,7 +29,6 @@
   border-radius: 50%;
   margin: 0 auto;
   text-align: center;
-
 }
 
 .container {
@@ -56,7 +54,6 @@
   background-color: #c0dacf;
   color: #125F60;
   text-decoration: none;
-  /*cursor:pointer;*/
 }
 
 .tasks {
@@ -71,8 +68,7 @@
   font-size: 15px;
   padding-top: 15px;
   padding-bottom: 15px;
-  padding-left: 0px;*/
-  /*color: #125F60;*/
+  padding-left: 0px;
 }
 
 /*contact icons*/
@@ -115,7 +111,6 @@
   display: flex;
   justify-content: center;
   font-size: 10px;
-  /*text-align: center !important;*/
 }
 
 .icon-footer {
@@ -124,24 +119,11 @@
   justify-content: center;
 }
 
-
-
-#le-wagon-picture {
-  height: 20px;
-  opacity: 40%;
-}
-
-#le-wagon-picture:hover {
-  opacity: 100%;
-}
-
 #schema {
   height: 200px;
 }
 
-
 #elderme-pic, #calculator-pic, #flashcard-pic {
-  /*background-position: center;*/
   padding-top: 5px;
   height: 200px;
   width: 350px;
@@ -151,4 +133,10 @@
  .link {
   color: #125F60;
   cursor:pointer;
+}
+
+.image-size {
+  width: 100%;
+  max-width: 400px; 
+  height: auto;
 }
