--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,9 +1,9 @@
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 .custom-link {
-  color: #125F60;
+  color: #125f60;
   text-decoration: underline;
 }
 
@@ -18,7 +18,7 @@ body {
 }
 
 .card img {
-  height: 200px; 
+  height: 200px;
   object-fit: cover;
   width: calc(100% - 2rem);
   margin: 0.5rem auto;
@@ -28,9 +28,21 @@ body {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
 
-p, h1, h2, h3, h4, h5, h6, ul{
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul {
   color: #084343;
+}
+
+.video-small {
+  width: 510px;
+  max-width: 100%;
 }
